--- a/index.html
+++ b/index.html
@@ -4,10 +4,146 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel='stylesheet' href='./styles/style.css' type="text/css">
+  <link rel='stylesheet' href='./styles/normalize.css' type="text/css">
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <div class="logo logo__lace_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="page-link" href="">Узнать &rarr;<a/></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Image">
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description flex-row">
+        <div class="two-columns flex-row indent-reset"> 
+          <p class="two-columns__brief indent-reset">Главные проблемы в обучении</p>
+          <ul class="main-text indent-reset">
+            <li class="main-text__paragraph"><p class="indent-reset">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренеруемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не даст нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p></li>
+            <li class="main-text__paragraph main-text__paragraph_indent"><p class="indent-reset"><span class="main-text__span-accent">Выводы:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p></li>
+            <li class="main-text__paragraph main-text__paragraph_indent"><p class="indent-reset">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p></li>
+          </ul>
+        </div>
+      </section>
+      <section class="digits">
+        <p class="section-title indent-reset">Цифры и факты</p>
+        <p class="section-subtitle indent-reset">Про учебу и мозг</p>
+        <div class="table">
+          <div class="table__cell">
+            <p class="table__heading indent-reset">86 миллиардов</p>
+            <p class="table__text indent-reset">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">2,1 миллиарда</p>
+            <p class="table__text indent-reset">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text indent-reset">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">1000 терабайт</p>
+            <p class="table__text indent-reset">Обьём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">500 триллионов</p>
+            <p class="table__text indent-reset">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">420 миллионов</p>
+            <p class="table__text indent-reset">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text indent-reset">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">17-20 лет</p>
+            <p class="table__text indent-reset">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">1885 год</p>
+            <p class="table__text indent-reset">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading indent-reset">1889 год</p>
+            <p class="table__text indent-reset">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.<p> 
+        <p><a class="feynman__link page-link" href="">Подробнее &rarr;</a><p>
+      </section>
+      <section class='kaufman'>
+        <p class="section-title indent-reset text-theme_dark">Принципы обучения</p>
+        <p class="section-subtitle indent-reset text-theme_dark">от Джорша Кауфмана</p>
+        <div class='table table_theme_dark'>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class=" table__heading indent-reset text-theme_dark">1</p>
+            <p class="table__text indent-reset text-theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">2</p>
+            <p class="table__text indent-reset text-theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">3</p>
+            <p class="table__text indent-reset text-theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">4</p>
+            <p class="table__text indent-reset text-theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">5</p>
+            <p class="table__text indent-reset text-theme_dark">Приготовьте все необходимое для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">6</p>
+            <p class="table__text indent-reset text-theme_dark">Устраните препядствия для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">7</p>
+            <p class="table__text indent-reset text-theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">8</p>
+            <p class="table__text indent-reset text-theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">9</p>
+            <p class="table__text indent-reset text-theme_dark">Занимайтесь по рассписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class="table__heading indent-reset text-theme_dark">10</p>
+            <p class="table__text indent-reset text-theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="image">
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__column">
+      <div class=" footer__column_content_copyright">
+            <div class="logo logo__place_footer"></div>
+            <p class="footer__author text-theme_dark">&copy; Виктор Абанькин</p>
+          </div>
+          <div class="text-theme_dark">
+            <h4 class="footer__column-heading indent-reset">О Практикуме</h4>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link text-theme_dark" href="#">Главная</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#">Концепция</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#">Наставники</a></li>
+          </ul>
+          </div>
+        <div class="text-theme_dark">
+            <h4 class="footer__column-heading indent-reset">Соцсети</h4>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="image">YouTube</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="image">ВКонтакте</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="image">TikTok</a></li>
+            </ul>
+          </div>
+        </div>
+   </footer> 
   </div>
 </body>
 </html>
