fix validation errors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="logo logo__lace_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="page-link" href="">Узнать &rarr;<a/></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="page-link" href="">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Image">
       <div class="header__square-pic"></div>
     </header>
@@ -70,7 +70,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.<p> 
-        <p><a class="feynman__link page-link" href="">Подробнее &rarr;</a><p>
+        <p><a class="feynman__link page-link" href="">Подробнее &rarr;</a></p>
       </section>
       <section class='kaufman'>
         <p class="section-title indent-reset text-theme_dark">Принципы обучения</p>
