--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo logo__lace_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="page-link" href="">Узнать &rarr;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Image">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -69,7 +69,7 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.<p> 
+        <p class="feynman__subtitle">Выучить и не забыть.</p> 
         <p><a class="feynman__link page-link" href="">Подробнее &rarr;</a></p>
       </section>
       <section class='kaufman'>
@@ -117,7 +117,7 @@
             <p class="table__text indent-reset text-theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="image">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Изображение">
       </section>
     </main>
     <footer class="footer">
@@ -137,9 +137,9 @@
         <div class="text-theme_dark">
             <h4 class="footer__column-heading indent-reset">Соцсети</h4>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="image">YouTube</a></li>
-              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="image">ВКонтакте</a></li>
-              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="image">TikTok</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Изображение">YouTube</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Изображение">ВКонтакте</a></li>
+              <li><a class="footer__column-link text-theme_dark" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Изображение">TikTok</a></li>
             </ul>
           </div>
         </div>
