--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="feynman">
-        <h2 class="feynman__title">Метод <br>Фейнмана</h2>
+        <h1 class="feynman__title">Метод Фейнмана</h1>
         <p class="feynman__subtitle">Выучить и не забыть.</p> 
         <a class="feynman__link" href="">Подробнее &rarr;</a>
       </section>
