--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_lace_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header-link" href="">Узнать &rarr;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение">
       <div class="header__square-pic"></div>
     </header>
@@ -20,10 +20,10 @@
       <section class="description">
         <div class="two-columns"> 
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="main-text">
+          <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренеруемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не даст нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph main-text__paragraph_indent"><span class="main-text__span-accent">Выводы:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph main-text__paragraph_indent">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Выводы:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p> 
         <a class="feynman__link" href="">Подробнее &rarr;</a>
       </section>
