files are organized by БЭМ

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel='stylesheet' href='./styles/normalize.css' type="text/css">
-  <link rel='stylesheet' href='./styles/style.css' type="text/css">
+  <link rel='stylesheet' href='./pages/index.css' type="text/css">
 </head>
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="">Узнать &rarr;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение">
       <div class="header__square-pic rotation"></div>
     </header>
@@ -29,38 +28,38 @@
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <div class="cards">
           <article class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Изображение">
-            <p class="cards__title">Два вида внимания</p>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают если чередовать сфокусированное и рассеянное мышление.</p>
           </article>
           <article class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Изображение">
-            <p class="cards__title">Recall</p>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное &ndash; это позволит соединить разрозненные порции памяти.</p>
           </article>
           <article class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение">
-            <p class="cards__title">Интерливинг</p>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </article>
           <article class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Изображение">
-            <p class="cards__title">Вопросы</p>
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</p>
           </article>
           <article class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Изображение">
-            <p class="cards__title">Иллюзия компетентности</p>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </article>
         </div>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -77,11 +76,11 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p> 
-        <a class="feynman__link" href="">Подробнее &rarr;</a>
+        <a class="feynman__link" href="#">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учебу и мозг</p>
+        <h3 class="section-subtitle">Про учебу и мозг</h3>
         <div class="table">
           <div class="table__cell">
             <p class="table__heading">86 миллиардов</p>
@@ -121,8 +120,8 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <p class="khan__author">Салман Хан</p>
-          <h2 class="khan__title">Весь мир &ndash; школа</h2>
+          <h2 class="khan__author">Салман Хан</h2>
+          <h3 class="khan__title">Весь мир &ndash; школа</h3>
           <blockquote class="khan__quote">
             <p style="margin: 0;">Страсть и новаторство Сала Хана меняет процесс обучения миллионов студентов по всему миру. Книгу &laquo;Весь мир &ndash; школа&raquo; нужно прочитать всем, кто занимается образованием &ndash; так учащиеся повсюду смогут получать навыки о знания, которые приносят успех в школе, карьере и жизни.</p>
           </blockquote>
@@ -183,7 +182,7 @@
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <aside class="resources__logo-zone">
           <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Изображение"></a>
           <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Изображение"></a>
@@ -215,7 +214,7 @@
           </nav>
         </div>
       </div>
-   </footer> 
+   </footer>
   </div>
 </body>
 </html>
