--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение">
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link link-animation" href="#">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Мальчик, вероятно, опять получивший двойку в школе в окружении родных, смотрящих на него с укором.">
       <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
@@ -29,40 +29,40 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
-        <div class="cards">
-          <article class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="Изображение">
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Фотография книги">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают если чередовать сфокусированное и рассеянное мышление.</p>
-          </article>
-          <article class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Изображение">
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Фотография статуи">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное &ndash; это позволит соединить разрозненные порции памяти.</p>
-          </article>
-          <article class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение">
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Фотография помещения наполненного людьми">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </article>
-          <article class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Изображение">
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Одинокий человек в просторном помещении">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</p>
-          </article>
-          <article class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Изображение">
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Вотография стопка книг на ладони">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </article>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -76,119 +76,119 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p> 
-        <a class="feynman__link" href="#">Подробнее &rarr;</a>
+        <a class="feynman__link link-animation" href="#">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <h3 class="section-subtitle">Про учебу и мозг</h3>
-        <div class="table">
-          <div class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">2,1 миллиарда</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2,1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Обьём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">500 триллионов</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">420 миллионов</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">17-20 лет</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17-20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">1885 год</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
-            <p class="table__heading">1889 год</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан</h2>
-          <h3 class="khan__title">Весь мир &ndash; школа</h3>
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир &ndash; школа</h2>
           <blockquote class="khan__quote">
-            <p style="margin: 0;">Страсть и новаторство Сала Хана меняет процесс обучения миллионов студентов по всему миру. Книгу &laquo;Весь мир &ndash; школа&raquo; нужно прочитать всем, кто занимается образованием &ndash; так учащиеся повсюду смогут получать навыки о знания, которые приносят успех в школе, карьере и жизни.</p>
+            <p class="khan__paragraph">Страсть и новаторство Сала Хана меняет процесс обучения миллионов студентов по всему миру. Книгу &laquo;Весь мир &ndash; школа&raquo; нужно прочитать всем, кто занимается образованием &ndash; так учащиеся повсюду смогут получать навыки о знания, которые приносят успех в школе, карьере и жизни.</p>
           </blockquote>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение">
-            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа">
+            <a class="khan__buy-link link-animation" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джорша Кауфмана</p>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">1</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">2</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">3</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">4</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">5</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">6</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препядствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">7</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">8</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">9</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по рассписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">10</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <aside class="resources__logo-zone">
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Изображение"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Изображение"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Изображение"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Изображение"></a>
-        </aside>
+        <div class="resources__logo-zone">
+          <a class="resources__link link-animation" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Изображение"></a>
+          <a class="resources__link link-animation" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Изображение"></a>
+          <a class="resources__link link-animation" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Изображение"></a>
+          <a class="resources__link link-animation" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Изображение"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -200,17 +200,17 @@
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
+            <a class="footer__column-link link-animation" href="#">Главная</a>
+            <a class="footer__column-link link-animation" href="#">Концепция</a>
+            <a class="footer__column-link link-animation" href="#">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Изображение">YouTube</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Изображение">ВКонтакте</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Изображение">TikTok</a>
+            <a class="footer__column-link link-animation" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Изображение">YouTube</a>
+            <a class="footer__column-link link-animation" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Изображение">ВКонтакте</a>
+            <a class="footer__column-link link-animation" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Изображение">TikTok</a>
           </nav>
         </div>
       </div>
