--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Фотография книги">
-            <h3 class="cards__title">Два вида внимания</h3>
+            <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Фотография статуи">
-            <h3 class="cards__title">Recall</h3>
+            <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное &ndash; это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Фотография помещения наполненного людьми">
-            <h3 class="cards__title">Интерливинг</h3>
+            <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Одинокий человек в просторном помещении">
-            <h3 class="cards__title">Вопросы</h3>
+            <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Вотография стопка книг на ладони">
-            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <img class="cards__image" src="./images/cards-competence.png" alt="Фотография стопка книг на ладони">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
@@ -83,37 +83,37 @@
         <h3 class="section-subtitle">Про учебу и мозг</h3>
         <ul class="table">
           <li class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
+            <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
+            <h4 class="table__heading">2,1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
+            <h4 class="table__heading">1000 терабайт</h4>
             <p class="table__text">Обьём памяти человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
+            <h4 class="table__heading">500 триллионов</h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
+            <h4 class="table__heading">420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">17-20 лет</h3>
+            <h4 class="table__heading">17-20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
+            <h4 class="table__heading">1885 год</h4>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
+            <h4 class="table__heading">1889 год</h4>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
